--- a/scss/paginas/crea-inicio.scss
+++ b/scss/paginas/crea-inicio.scss
@@ -10,7 +10,7 @@
     a{
         button{
             border-radius: 10px;
-            background-color: #c7c7f3;
+            background-color: #f3d3c7;
             border: 0px solid;
         }
         :hover{
@@ -33,7 +33,7 @@
             align-items: center;
             text-align: center;
             border-radius: 20px;
-            background-color: #c7eef3;
+            background-color: #f3d3c7;
             .infoBienvenida{
                 width: 40%;
                 padding: 0px 30px;
